[gd_scene load_steps=9 format=3 uid="uid://cqupai8j3ftri"]

[ext_resource type="PackedScene" uid="uid://bhxlmgc3clgt0" path="res://Scenes/Subscenes/player_1.tscn" id="1_3uona"]
[ext_resource type="Script" path="res://Scripts/multiplayer_setup.gd" id="2_ckh85"]
[ext_resource type="PackedScene" uid="uid://tcaf37rxrs7o" path="res://Scenes/main_menu.tscn" id="3_akyd3"]

[sub_resource type="BoxMesh" id="BoxMesh_o4il2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4g7w5"]

[sub_resource type="BoxMesh" id="BoxMesh_l8c12"]

[sub_resource type="BoxMesh" id="BoxMesh_usohq"]

[sub_resource type="Environment" id="Environment_b8vhw"]
background_mode = 1
background_color = Color(1, 1, 1, 1)

[node name="Level" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="World"]
transform = Transform3D(29.792, 0, 0, 0, 0.207, 0, 0, 0, 15, 0, 0, 0)
mesh = SubResource("BoxMesh_o4il2")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Floor/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="Ceiling" type="MeshInstance3D" parent="World"]
transform = Transform3D(29.792, 0, 0, 0, 0.207, 0, 0, 0, 15, -0.177695, 3.52714, 0)
visible = false
mesh = SubResource("BoxMesh_o4il2")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Ceiling"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ceiling/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="Wall" type="MeshInstance3D" parent="World"]
transform = Transform3D(30, 0, 0, 0, 3, 0, 0, 0, 0.5, -0.126296, 1.4331, -7.22842)
mesh = SubResource("BoxMesh_l8c12")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="Wall2" type="MeshInstance3D" parent="World"]
transform = Transform3D(30, 0, 0, 0, 3, 0, 0, 0, 0.5, -0.157211, 1.51874, 7.24888)
mesh = SubResource("BoxMesh_l8c12")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall2/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="Wall3" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.5, 0, 0, 0, 3, 0, 0, 0, 15, 14.6061, 1.43594, 0)
mesh = SubResource("BoxMesh_usohq")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall3/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="Wall4" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.5, 0, 0, 0, 3, 0, 0, 0, 15, -15.0511, 1.43594, 0)
mesh = SubResource("BoxMesh_usohq")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall4/StaticBody3D"]
shape = SubResource("BoxShape3D_4g7w5")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.96608, 1.44264, 0.00486422)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b8vhw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.100778, 0.782521, -0.614414, 0, 0.617558, 0.786526, 0.994909, -0.0792648, 0.0622365, -19.7503, 7.62638, 5.56625)

[node name="Multiplayer" type="Node3D" parent="."]
script = ExtResource("2_ckh85")
player1_scene = ExtResource("1_3uona")
player2_scene = ExtResource("1_3uona")

[node name="MainMenu" parent="Multiplayer" instance=ExtResource("3_akyd3")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Multiplayer"]
_spawnable_scenes = PackedStringArray("res://Scenes/Subscenes/player_1.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Multiplayer/MainMenu/Host" to="Multiplayer" method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/MainMenu/Join" to="Multiplayer" method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer/MainMenu/Offline" to="Multiplayer" method="_on_offline_pressed"]

[editable path="Multiplayer/MainMenu"]
